--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ author:
   name             : "Kyutae Joseph Shim"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Seoul"
+  employer         : "GSDS, Seoul National University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "ktjshim@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
